// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a success snackbar 1`] = `
<div
  class="snackbar success"
>
  <span
    aria-label="su-check"
    class="icon su-check"
  />
</div>
`;

exports[`Render an error snackbar 1`] = `
<div
  class="snackbar error"
>
  <span
    aria-label="su-exclamation-triangle"
    class="icon su-exclamation-triangle"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.error
    </strong>
    <button
      class="closeButton"
    >
      sulu_admin.close
      <span
        aria-label="su-times"
        class="closeButtonIcon su-times"
      />
    </button>
  </div>
</div>
`;

exports[`Render an error snackbar without close button 1`] = `
<div
  class="snackbar error"
>
  <span
    aria-label="su-exclamation-triangle"
    class="icon su-exclamation-triangle"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.error
    </strong>
  </div>
</div>
`;
